// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdminInterface component should disabled button and render alert for form submitting 1`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Tabs)
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -56,
                "marginRight": -56,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(Tab)
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
          </WithStyles(Tabs)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={true}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div
          style={
            Object {
              "height": 16,
            }
          }
        />
        <WithStyles(Alert)
          message="Request is being processed."
          showLoader={true}
          title="Saving"
          type="info_outline"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              disabled={true}
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should display badges on tabs for erroring fields 1`] = `
Array [
  <WithStyles(Tab)
    key="bibliographic"
    label={
      <WithStyles(Badge)
        badgeContent={1}
        color="error"
      >
        Bibliographic
      </WithStyles(Badge)>
    }
    value="bibliographic"
  />,
  <WithStyles(Tab)
    key="security"
    label={
      <WithStyles(Badge)
        badgeContent={3}
        color="error"
      >
        Security
      </WithStyles(Badge)>
    }
    value="security"
  />,
]
`;

exports[`AdminInterface component should display successful alert 1`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Tabs)
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -56,
                "marginRight": -56,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(Tab)
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
          </WithStyles(Tabs)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div
          style={
            Object {
              "height": 16,
            }
          }
        />
        <WithStyles(Alert)
          allowDismiss={true}
          message="Work has been saved successfully"
          title="Success"
          type="done"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should display successful alert 2`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Tabs)
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -56,
                "marginRight": -56,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(Tab)
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
          </WithStyles(Tabs)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <div
          style={
            Object {
              "height": 16,
            }
          }
        />
        <WithStyles(Alert)
          allowDismiss={true}
          message="Work has been saved successfully"
          title="Success"
          type="done"
        />
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render a title with html correctly 1`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - Cost analysis: outsourcing radiofrequency ablution for massiv
        <sub
          key="1"
        >
          e
        </sub>
         renal m
        <sup
          key="3"
        >
          a
        </sup>
        sses ™ ♦: UQ:123456
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      />
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={false}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render alert message for retracted records 1`] = `
<WithStyles(Alert)
  message="This article has been retracted"
  type="warning"
/>
`;

exports[`AdminInterface component should render default view as a full form view 1`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      />
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={false}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
      <TabContainer
        currentTab="bibliographic"
        key="files"
        tabbed={false}
        value="files"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Files"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="filesSection"
          />
        </StandardCard>
      </TabContainer>
      <TabContainer
        currentTab="bibliographic"
        key="security"
        tabbed={false}
        value="security"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Security"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="securitySection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render default view as a tabbed form view 1`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Edit Journal Article - This is test record: UQ:123456
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Tabs)
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -56,
                "marginRight": -56,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(Tab)
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
            <WithStyles(Tab)
              key="security"
              label="Security"
              value="security"
            />
          </WithStyles(Tabs)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render in create mode 1`] = `
<StandardPage>
  <WithStyles(Grid)
    alignItems="center"
    container={true}
    direction="row"
    spacing={0}
    style={
      Object {
        "marginTop": -24,
      }
    }
  >
    <WithStyles(ConfirmDialogBox)
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Edit another work",
          "confirmationMessage": "Work has been updated",
          "confirmationTitle": "Work has been updated",
        }
      }
      onAction={[Function]}
      onRef={[Function]}
    />
    <WithStyles(Grid)
      item={true}
      style={
        Object {
          "marginBottom": 12,
        }
      }
      xs={true}
    >
      <WithStyles(Typography)
        color="primary"
        style={
          Object {
            "fontSize": 24,
          }
        }
        variant="h2"
      >
        Add a new Thesis
      </WithStyles(Typography)>
    </WithStyles(Grid)>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        item={true}
        xs="auto"
      >
        <Memo() />
      </WithStyles(Grid)>
    </Hidden>
    <Hidden
      implementation="js"
      lgDown={false}
      lgUp={false}
      mdDown={false}
      mdUp={false}
      smDown={false}
      smUp={false}
      xlDown={false}
      xlUp={false}
      xsDown={true}
      xsUp={false}
    >
      <WithStyles(Grid)
        container={true}
        direction="row"
        spacing={0}
      >
        <WithStyles(Grid)
          item={true}
          xs={12}
        >
          <WithStyles(Tabs)
            classes={
              Object {
                "indicator": "tabindicator",
              }
            }
            indicatorColor="primary"
            onChange={[Function]}
            scrollButtons="on"
            style={
              Object {
                "marginLeft": -56,
                "marginRight": -56,
              }
            }
            textColor="primary"
            value="bibliographic"
            variant="scrollable"
          >
            <WithStyles(Tab)
              key="bibliographic"
              label="Bibliographic"
              value="bibliographic"
            />
            <WithStyles(Tab)
              key="files"
              label="Files"
              value="files"
            />
            <WithStyles(Tab)
              key="security"
              label="Security"
              value="security"
            />
          </WithStyles(Tabs)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </Hidden>
  </WithStyles(Grid)>
  <form>
    <WithStyles(Grid)
      container={true}
      spacing={0}
    >
      <TabContainer
        currentTab="bibliographic"
        key="bibliographic"
        tabbed={true}
        value="bibliographic"
      >
        <StandardCard
          primaryHeader={true}
          smallTitle={true}
          squareTop={true}
          title="Bibliographic"
        >
          <Field
            component={[Function]}
            disabled={false}
            name="bibliographicSection"
          />
        </StandardCard>
      </TabContainer>
    </WithStyles(Grid)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <WithStyles(Grid)
        item={true}
        xs={12}
      >
        <WithStyles(Grid)
          container={true}
          spacing={8}
          style={
            Object {
              "marginTop": 8,
            }
          }
        >
          <WithStyles(Grid)
            item={true}
            sm={2}
            xs={12}
          >
            <WithStyles(Button)
              color="secondary"
              fullWidth={true}
              onClick={[Function]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
              Cancel
            </WithStyles(Button)>
          </WithStyles(Grid)>
          <WithStyles(Grid)
            item={true}
            sm={10}
            xs={12}
          >
            <WithStyles(Button)
              color="primary"
              fullWidth={true}
              onClick={[MockFunction]}
              style={
                Object {
                  "whiteSpace": "nowrap",
                }
              }
              variant="contained"
            >
               Submit 
            </WithStyles(Button)>
          </WithStyles(Grid)>
        </WithStyles(Grid)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </form>
</StandardPage>
`;

exports[`AdminInterface component should render when no record is available 1`] = `
<div
  className="empty"
/>
`;
